--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
+version: '3.8'
+
 services:
   pocket-poktroll-faucet:
-    image: stakenodes/poktroll-faucet:latest
-    container_name: poktroll-faucet
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: unless-stopped
     ports:
       - 8088:8088
