--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@hanchon/evmos-ts-wallet": "^0.2.0",
     "@tharsis/transactions": "^0.2.6",
     "bech32": "^2.0.0",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "ethers": "^5.7.1",
     "evmosjs": "0.3.3",
