moved more info the config and environment variables

--- a/.env.example.beta
+++ b/.env.example.beta
@@ -12,6 +12,9 @@ mnemonic="your twelve-word seed phrase here"
 # The chain ID of the Pocket Network
 chainId="pocket-beta"
 
+# Token Name
+tokenName="POKT"
+
 # RPC endpoint for transaction broadcasting
 rpcEndpoint="https://shannon-testnet-grove-rpc.beta.poktroll.com"
 
@@ -28,6 +31,10 @@ txDenom="upokt"
 # Transaction amount in smallest denomination (upokt)
 txAmount=10000000000
 
+
+# Denomination used for Gas
+txFeeDenom="upokt"
+
 # Gas price per unit in upokt
 txFeeAmount=1
 
@@ -38,8 +45,11 @@ txGasLimit=100000
 #          Rate-Limiting Config             #
 #############################################
 
-# Maximum allowed transactions per wallet address in 24h
+# Maximum allowed transactions per wallet address in limitHours
 limitAddress=2
 
-# Maximum allowed transactions per IP address in 24h
+# Maximum allowed transactions per IP address in limitHours
 limitIp=10
+
+# limit hours
+limitHours = 24
