fixed config variables use

--- a/.env.example.beta
+++ b/.env.example.beta
@@ -45,6 +45,9 @@ txGasLimit=100000
 #          Rate-Limiting Config             #
 #############################################
 
+# Transaction timeout in seconds
+txTimeout=500000
+
 # Maximum allowed transactions per wallet address in limitHours
 limitAddress=2
 
