added api endpoint to faucet for checking wallet balances

--- a/.env.example.alpha
+++ b/.env.example.alpha
@@ -15,6 +15,9 @@ chainId="poktroll"
 # RPC endpoint for transaction broadcasting
 rpcEndpoint="https://shannon-testnet-grove-rpc.alpha.poktroll.com"
 
+# RPC endpoint for balance check
+apiEndpoint="https://shannon-testnet-grove-api.alpha.poktroll.com"
+
 # Human-readable address prefix for Pocket Network
 bech32Prefix="pokt"
 
