--- a/.env.example.beta
+++ b/.env.example.beta
@@ -18,6 +18,9 @@ tokenName="POKT"
 # RPC endpoint for transaction broadcasting
 rpcEndpoint="https://shannon-testnet-grove-rpc.beta.poktroll.com"
 
+# RPC endpoint for balance check
+apiEndpoint="https://shannon-testnet-grove-api.beta.poktroll.com"
+
 # Human-readable address prefix for Pocket Network
 bech32Prefix="pokt"
 
